# camp_zipnerf

./: README.md  pyproject.toml  render.py  requirements.txt
camp_zipnerf/: eval.py  train.py
camp_zipnerf/internal/: __init__.py  alignment.py  camera_delta.py  configs.py  datasets.py  geometry.py  grid_utils.py  image_utils.py  linspline.py  loss_utils.py  ref_utils.py  render.py  rigid_body.py  stepfun.py  train_utils.py  videos_utils.py  vis.py
internal/: camera_utils.py  coord.py  datasets.py  grid_utils.py  image_io.py  models.py  quaternion.py  spin_math.py
scripts/: run_all_unit_tests.sh
scripts/camp/: 360_train.sh
scripts/zipnerf/: 360_eval.sh  360_render.sh  360_train.sh  blender_eval.sh  blender_train.sh  ms360_eval.sh  ms360_train.sh
tests/: camera_utils_test.py  coord_test.py  datasets_test.py  geometry_test.py  geopoly_test.py  grid_utils_test.py  hash_resample_test.py  image_utils_test.py  linspline_test.py  loss_utils_test.py  math_test.py  quaternion_test.py  ref_utils_test.py  render_test.py  resample_test.py  rigid_body_test.py  spin_math_test.py  stepfun_test.py  train_utils_test.py  utils_test.py
